[package]
edition = "2021"
name = "adminix_macro"
version = "0.0.1"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
syn = {version = "1.0", features = ["full"]}
sqlx = {version = "*", features = ["sqlite", 'runtime-actix-rustls']}
actix-web = "*"
maud = { version = "*", features = ["actix-web"] }