[package]
description = "macro for adminix"
documentation = "https://docs.rs/adminix"
edition = "2021"
homepage = "https://github.com/julienfr112/adminix/tree/master/adminix_macro"
license = "MIT OR Apache-2.0"
name = "adminix_macro"
repository = "https://github.com/julienfr112/adminix/tree/master/adminix_macro"
version = "0.0.1"

[lib]
proc-macro = true

[dependencies]
actix-web = "3"
maud = {version = ">0.23", features = ["actix-web"]}
proc-macro2 = "1.0"
quote = "1.0"
sqlx = {version = "0.4", features = ["sqlite", 'runtime-actix-rustls']}
syn = {version = "1.0", features = ["full"]}
